# polars-formula

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_COLORED.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v0.1.3.md  materialize.rs
.github/workflows/: publish.yml
examples/: 01.rs  01_simple_formula.rs  02_cake.rs  02_colors.rs  03_cake.rs  03_cbpp.rs  04_cbpp.rs  04_dsl_comprehensive.rs  05_sleep.rs  06_df.rs  07_poly.rs  07_simple_api.rs  08_advanced_api.rs  cake_dsl_demo.rs  clean_names_demo.rs  colored_formula_demo.rs  hex_colors_demo.rs  intercept_removal_demo.rs  simple_formula.rs  simple_formula_demo.rs  sleep_study_dsl_demo.rs
examples/data/: test.R
notes/: checklist_bump.md  feature_parity.md  implementation_plan.md  notes_to_self.md  roadmap.md  summary.md
polars_modelmatrix/: Cargo.toml  pyproject.toml
polars_modelmatrix/src/: lib.rs
polars_modelmatrix_py/: README.md  pyproject.toml
polars_modelmatrix_py/src/polars_modelmatrix/: __init__.py  _api.py
spec/: grammar.ebnf
src/: color.rs  lib.rs  simple_colored.rs
src/dsl/: ast.rs  canon.rs  materialize.rs  mod.rs  parser.rs  pretty.rs
src/internal/: color.rs  mod.rs
src/internal/dsl/: ast.rs  canon.rs  materialize.rs  mod.rs  parser.rs
tests/: canonicalization_test.rs  debug_materialization.rs  debug_parser.rs  debug_parser_issues.rs  dsl_basic_test.rs  dsl_proptest.proptest-regressions  dsl_proptest.rs  dsl_tests.rs  expanded_parser_test.rs  group_canonicalization_test.rs  poly_degree_4_test.rs  poly_validation_test.rs  proptest_algebra.rs  proptest_roundtrip.rs  quick_wins_test.rs  simple_dsl_test.rs
