[package]
name = "polars-formula"
version = "0.1.102"
edition = "2021"
authors = ["Alex H <alexhallam6.28@gmail.com>"]
license = "MIT"
description = "High-performance formula parsing and materialization library for Polars DataFrames with R/Formulaic/Patsy style syntax"
readme = "README.md"
homepage = "https://github.com/alexh/polars-formula"
repository = "https://github.com/alexh/polars-formula"
documentation = "https://docs.rs/polars-formula"
keywords = ["polars", "formula", "statistics", "regression", "dataframe"]
categories = ["science", "data-structures"]
rust-version = "1.70"

[features]
default = []
faer = ["dep:faer"]

[dependencies]
faer = { version = "0.22.6", optional = true }
polars = "0.50.0"
thiserror = "2.0.16"
tokio = "1.47.1"
chumsky = "0.9"

[dev-dependencies]
proptest = "1"
