[project]
name = "polars-modelmatrix"
version = "0.1.0"
description = "Generate model matrices (y, X) from a Polars DataFrame using formula syntax"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "polars>=0.20",
  "polars_ols>=0.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

